Fixed type error
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>